<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hope</string>
    <string name="search_donor">Search Donor</string>
    <string name="register_as_donor">Register As Donor</string>
    <string name="already_registerd">Already Registered?</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="mobile_mumber">Mobile Number</string>
    <string name="male">"  Male"</string>
    <string name="female" tools:ignore="DuplicateDefinition">"  Female"</string>
    <string name="gender">Gender :</string>
    <string name="register">Register</string>
    <string name="update">Update</string>

    <string-array name="cities">
        <item>Adabor</item>
        <item>Airport</item>
        <item>Badda</item>
        <item>Banani</item>
        <item>Bangshal</item>
        <item>Bhashantek</item>
        <item>Cantonment</item>
        <item>Chackbazar</item>
        <item>Darussalam</item>
        <item>Daskhinkhan</item>
        <item>Demra</item>
        <item>Dhamrai</item>
        <item>Dhanmondi</item>
        <item>Dohar</item>
        <item>Gandaria</item>
        <item>Gulshan</item>
        <item>Hazaribag</item>
        <item>Jatrabari</item>
        <item>Kafrul</item>
        <item>Kalabagan</item>
        <item>Kamrangirchar</item>
        <item>Keraniganj</item>
        <item>Khilgaon</item>
        <item>Khilkhet</item>
        <item>Kotwali</item>
        <item>Lalbag</item>
        <item>Mirpur</item>
        <item>Mohammadpur</item>
        <item>Motijheel</item>
        <item>Mugda</item>
        <item>Nawabganj</item>
        <item>New Market</item>
        <item>Pallabi</item>
        <item>Paltan</item>
        <item>Ramna</item>
        <item>Rampura</item>
        <item>Rupnagar</item>
        <item>Sabujbag</item>
        <item>Savar</item>
        <item>Shah Ali</item>
        <item>Shahbag</item>
        <item>Shahjahanpur</item>
        <item>Sherebanglanagar</item>
        <item>Shyampur</item>
        <item>Sutrapur</item>
        <item>Tejgaon</item>
        <item>Turag</item>
        <item>Uttara</item>
        <item>Uttara West</item>
        <item>Uttarkhan</item>
        <item>Vatara</item>
        <item>Wari</item>
    </string-array>

    <string-array name="ability">
        <item>"I can donate now"</item>
        <item>"I can't donate now"</item>
    </string-array>


</resources>
