<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_03"
    android:backgroundTint="#ef9a9a"
    android:backgroundTintMode="screen"
    android:scaleType="fitXY"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginLayoutNameEditTextId"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/name"
        android:background="@drawable/custom_edittext_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="#bdbdbd"
        android:textSize="13sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/loginLayoutMobileEditTextId"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/age"
        android:background="@drawable/custom_edittext_background"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/mobile_mumber"
        android:inputType="number|phone"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="#bdbdbd"
        android:textSize="13sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLayoutNameEditTextId"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginLayoutloginButtonId"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_login_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/loginLayoutHomeButtonId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLayoutMobileEditTextId"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/loginLayoutHomeButtonId"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_gradient_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />


</androidx.constraintlayout.widget.ConstraintLayout>